[package]
name = "lol_html_js"
authors = ["Josh <dev@jotch.dev>"]
license = "MIT"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust/lib.rs"
name = "lib"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
lol_html = "0.3.1"
encoding_rs = "0.8.28"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"

# itertools = "0.10.3"
# anyhow = "1.0"
# thiserror = "1.0"

# ouroboros = "0.14.2"
